# albert-plugin-menubar

./: CMakeLists.txt  README.md  metadata.json
src/: plugin.h  plugin.mm
